# gekidan

./: .env.example  .env.test  .gitignore  Cargo.toml  README.md
migrations/: Cargo.toml
migrations/src/: lib.rs  m20220713_000001_create_user_table.rs  m20220724_000001_create_user_rsa_key_table.rs  m20230801_000001_create_note_table.rs  m20230808_000001_create_follower_table.rs
src/: container.rs  create_app.rs  lib.rs  main.rs
src/api/controllers/: root_handlers.rs  user_handlers.rs  well_known_handlers.rs
src/api/dto/: user.rs
src/api/extractors/: admin_claim.rs
src/app/: container.rs  factory.rs
src/domain/: app_config.rs  constants.rs  error.rs  id_generator.rs
src/domain/activity_pub/: activity_pub.rs  activity_pub_service.rs
src/domain/follower/: follower.rs  follower_repository.rs
src/domain/models/: app_config.rs  user.rs  user_rsa_key.rs
src/domain/note/: note.rs  note_repository.rs  paging.rs
src/domain/repositories/: user.rs
src/domain/services/: activity_pub.rs  app_config.rs  rsa_key.rs  user.rs
src/domain/user/: user.rs  user_repository.rs  user_service.rs
src/infrastructure/: error.rs
src/infrastructure/config/: env_file.rs
src/services/: activity_pub.rs  app_config.rs  user.rs
src/usecase/: activity_pub.rs  user_management.rs  user_note.rs
tests/: api.rs
tests/api/: test_activity_pub_controller.rs  test_echo_controller.rs  test_root_controllers.rs  test_root_handlers.rs  test_user_handler.rs  test_user_management_controller.rs  test_user_note_controller.rs  test_well_known_handlers.rs
(+22 files in other folders)
