[workspace]
members = [".", "migrations"]

[package]
name = "gekidan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
migrations = { path = "migrations" }
actix-web = "4.3.1"
async-trait = "0.1.71"
awc = { version = "3.1.1", features = ["openssl"] }
base64 = "0.21.2"
chrono = "0.4.26"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.19"
nanoid = "0.4.0"
once_cell = "1.18.0"
openssl = "0.10.55"
sea-orm = { version = "0.12.2", features = ["sqlx-sqlite", "runtime-actix-native-tls", "macros"] }
serde = "1.0.167"
serde_json = "1.0.100"
sha256 = "1.1.4"
url = "2.4.0"
void = "1.0.2"
